refactor: 로또 정렬 책임을 domain에서 outputView로 이관